fix: replace remaining deprecated URL constructors in ISelenium